# bbia-sim

./: .bandit  .coverage.Mac.26081.XHGWCDlx  .coverage.Mac.26319.XbcthAox  .coverage.Mac.29625.XZzQjjSx  .coverage.Mac.32849.XxflCRtx  .coverage.Mac.32864.XCARbgrx  .coverage.Mac.38035.XaGJoKAx  .coverage.Mac.61653.XuXqEMwx  .coverage.Mac.61666.XOYrTMlx  .coverage.Mac.80244.Xyrgjmfx  .coverage.Mac.81836.XfbFiRAx  .coveragerc  .cursorignore  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  ACTIONS_GITHUB_ISSUES.md  ACTIVITE_GIT_ANALYSE.md  ANALYSE_COVERAGE_IMPORTS.md  ANALYSE_ISSUES_REACHY_MINI_OFFICIEL.md  ANALYSE_PROCESSUS.md  ANALYSE_PROFIL_PROFESSIONNEL.md  ANALYSE_TESTS_COMPLETE.md  ANALYSE_VERIFICATION_PROJET.md  AUDIT_3D_BBIA.md  AUDIT_FINAL_REPORT.md  AUDIT_ISSUES_DIFFICILES.md  AUDIT_RELEASE_V1.3.2.md  AUDIT_ROBOT_ASSEMBLY.md  AUDIT_TACHES_RESTANTES_COMPLET.md  AUTRES_CORRECTIONS.md  BADGES.md  BILAN_COMPLET.md  CE_QUI_NOUS_RESTE_VRAIMENT_A_FAIRE.md  CHANGELOG.md  CHECKLIST_FINALE_v1.3.0.md  CHECKLIST_FINALISATION_VERSION.md  CHECKLIST_VALIDATION_HARDWARE_DECEMBRE_2025.md  (+117 more)
.cursor/: settings.json
.github/: ISSUES_TO_CREATE.md  PULL_REQUEST_TEMPLATE.md  TOPICS.md  dependabot.yml
.venv-veille/: pyvenv.cfg
artifacts/: ARCHITECTURE_OVERVIEW.html  AUDIT_REACHY_COMPLET_FINAL.md  AUDIT_REACHY_SYNTHESE.md  CORRECTIONS_APPLIQUEES.md  PORTFOLIO_ONEPAGER.html  README.html  RELEASE_NOTES.html  STATUT_FINAL_AUDIT.md  SYNTHESE_FINALE_AUDIT.md  WATCHDOG_IMPLEMENTATION.md  audit_dates_md.json  audit_md_janvier2026.json  audit_reachy_mini_backend.jsonl  audit_reachy_modules.jsonl  bbia_benchmarks_mujoco_20251025_171640.json  latency.csv  latency_reachy_mini.csv  test_emotion.jsonl  test_results.json  test_results_reachy_mini.json
assets/: MEDIAS_INVENTAIRE.md  README.md
bbia_memory/: conversation_history.json  user_preferences.json
deploy/: public_api.py
docs/: AMELIORATIONS_FUTURES_IMPLEMENTEES.md  AMELIORATIONS_VISUELLES_APPLIQUEES.md  AMELIORATIONS_VISUELLES_CHIC_DEC2025.md  ANALYSE_CODE_UNITY_AR.md  ANALYSE_COVERAGE_DETAILS.md  ANALYSE_DOUBLONS_COMPLETE.md  ANALYSE_DOUBLONS_MD.md  ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  ARCHITECTURE_OVERVIEW.md  ARCHIVAGE_MD_OBSOLETES.md  ASSISTANT_IA_GUIDE.md  AUDIT_COMPLET_MODIFICATIONS_2025.md  AUDIT_COVERAGE_COMPLET.md  AUDIT_COVERAGE_FINAL.md  AUDIT_DOCUMENTATION_COMPLET.md  AUDIT_DOCUMENTATION_COMPLETE.md  AUDIT_DOCUMENTATION_FINAL.md  AUDIT_EXPERT_MODULES_CRITIQUES_2025.md  AUDIT_PROJET_COMPLET_DECEMBRE_2025.md  A_FAIRE_RESTANT.md  BACKUP_v1.1.1_ETAT_ACTUEL.md  BILAN_FINAL_DOCUMENTATION.md  CE_QUI_RESTE_ENCORE.md  CE_QUI_RESTE_REEL.md  CE_QUI_RESTE_VRAIMENT_A_FAIRE.md  CHANGELOG_REORGANISATION.md  COMMUNITY_CONFIG.md  CONFORMITE_PARFAITE_SDK_OFFICIEL.md  CONFORMITE_REACHY_MINI_COMPLETE.md  CONFORMITE_SDK_OFFICIEL_REACHY_MINI.md  CONFORMITE_SDK_RESUME.md  CONTRACT.md  CORRECTIONS_MODULES_NON_PRIORITAIRES_2025.md  DOCUMENTATION_CLEANUP_RESUME.md  ERROR_CORRECTION_REPORT.md  ETAPE_7_RESUME.md  ETAT_ACTUEL_DECEMBRE_2025.md  FAQ.md  FICHIERS_MD_A_SUPPRIMER.md  (+66 more)
examples/: LANCE_DEMO_3D.sh  LANCE_DEMO_3D_FIXE_TAILLE.sh  README.md  audio_deepfilternet_example.py  behave_follow_face.py  demo_adaptive_behavior.py  demo_alarm_clock.py  demo_all_capabilities.py  demo_apps.py  demo_awake.py  demo_bbia_complete.py  demo_bbia_integration.py  demo_bbia_phase2_integration.py  demo_behavior_ok.py  demo_chat_bbia.py  demo_chat_bbia_3d.py  demo_chat_simple.py  demo_chat_with_tools.py  demo_collision_detection.py  demo_daemon.py  demo_dance.py  demo_emotion_fixed.py  demo_emotion_ok.py  demo_emotion_recognition.py  demo_emotion_show.py  demo_exercise.py  demo_follow_object.py  demo_game.py  demo_idle_animations.py  demo_integration.py  demo_kinematics.py  demo_media.py  demo_meditation.py  demo_memory.py  demo_metrics.py  demo_motors.py  demo_mujoco_amelioree.py  demo_mujoco_continue.py  demo_music_reaction.py  demo_news_reader.py  (+28 more)
log/: MUJOCO_LOG.TXT  reachy_official_diff.json  reachy_official_status.json  veille_diff.json  veille_reachy_mini.csv  veille_reachy_mini.json
logs/: alignment_check_results.json  bandit_report.json  bandit_report_after.json  bandit_report_final.json  bandit_report_final_quality.json  conformity_report_reachy_mini.json  reachy_commands.txt  safety_report.json
metrics/: dashboard.html  metrics.csv  metrics.json  metrics.md  metrics.yaml
presentation/: ACCES_RAPIDE.md  BBIA-SIM_Presentation.md  BRIEF_GRAPHISTE_DA_BBIA.md  LinkedIn_Post.md  README_BRANDING.md  SUIVI_BRANDING.md  WORKFLOW_OPEN_SOURCE.md  palette_bbia.css  palette_bbia.json  presentation_content.json  preview_palette.html  specifications_banniere_univers.md  specifications_logo_bbia.md
requirements/: requirements-audio.txt  requirements-deepface.txt  requirements-gradio.txt  requirements-veille.txt  requirements-voice.txt  requirements.txt
scripts/: AUDIT_COMPLET_SCRIPTS.md  AUDIT_RESUME_ACTIONS.md  CHANGELOG_AUDIT.md  PLAN_CONSOLIDATION_AUDIT_SCRIPTS.md  PLAN_FUSION_SCRIPTS.md  README.md  TEST_GIF_SCRIPT.md  analyse_exhaustive_conformite.py  analyze_joints_detailed.py  analyze_stl.py  archive_obsolete_md.py  audit_and_correct_dates_md.py  audit_and_improve_md.py  audit_complet_md.py  audit_complet_md_janvier2026.py  audit_conformite_complete.py  audit_dates_md.py  audit_documentation_md.py  audit_exhaustif_details.py  audit_methodes_backend.py  audit_reachy_integration.py  audit_sdk_officiel_nov2025.py  audit_systematique_complet.py  audit_systematique_exhaustif.py  bandit_safe.py  bbia_advanced_dashboard_server.py  bbia_dashboard_server.py  bbia_doctor.py  bbia_performance_benchmarks.py  bbia_safe.sh  check_joints.py  check_official_alignment.py  cleanup_all.sh  cleanup_metadata_files.sh  cleanup_project.sh  collect_metrics.sh  comparaison_profonde_methodes_backend.py  compare_all_models.py  compare_models.py  compare_sdk_methods.py  (+87 more)
tests/: HISTORIQUE_CORRECTIONS_CI.md  PLAN_CONSOLIDATION_TESTS.md  RAPPORT_TESTS_CI_RISQUE.md  REACHY_MINI_TESTS_STRUCTURE.md  README.md  VERIFICATION_FINALE_CI.md  conftest.py  (+216 more)
(+1543 files in other folders)
