[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbia-sim"
version = "1.4.0"
description = "BBIA - Moteur cognitif Python pour robot Reachy Mini Wireless avec Backend Unifié RobotAPI + IA Légère (Whisper + YOLOv8n + MediaPipe) + SDK Officiel Reachy-Mini"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Arkalia Luna System", email = "arkalia.luna.system@gmail.com"}
]
maintainers = [
    {name = "Arkalia Luna System", email = "arkalia.luna.system@gmail.com"}
]
keywords = ["robotics", "ai", "emotion", "cognitive", "reachy", "simulation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    # BBIA Core Dependencies
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "Pillow>=10.0.0",
    "mujoco>=2.1.0",
    "fastapi>=0.109.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.18",
    
    # SDK Officiel Reachy Mini Dependencies
    "reachy_mini_motor_controller>=1.0.0",
    "eclipse-zenoh>=1.4.0",
    "reachy-mini-rust-kinematics>=1.0.1",
    "cv2_enumerate_cameras>=1.2.1",
    "soundfile>=0.13.1",
    "huggingface-hub>=0.34.4",
    "log-throttling>=0.0.3",
    "scipy>=1.15.3",
    "asgiref>=3.7.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "jinja2>=3.1.0",
    "pyserial>=3.5",
    # IA / Vision / Audio (utilisés dans le code)
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "mediapipe>=0.10.0",
    "ultralytics>=8.0.0",
    "openai-whisper>=20231117",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    # NLP amélioré (optionnel, chargé à la demande)
    "sentence-transformers>=2.2.0",
    # LLM Conversationnel (Phi-2, TinyLlama)
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    # bitsandbytes optionnel (quantification 8-bit, peut être installé séparément)
    # "bitsandbytes>=0.41.0",  # Décommenter si quantification 8-bit souhaitée
]

[project.optional-dependencies]
audio = [
    "pyaudio>=0.2.11",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.0.0",
    "coverage>=7.0.0",
    "pre-commit>=3.0.0",
    "pip-audit>=2.6.0",
    "safety>=2.3.5",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "coverage>=7.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
bbia-sim = "bbia_sim.bbia_awake:main"

[project.urls]
Homepage = "https://github.com/arkalia-luna-system/bbia-sim"
Documentation = "https://github.com/arkalia-luna-system/bbia-sim#readme"
Repository = "https://github.com/arkalia-luna-system/bbia-sim"
"Bug Tracker" = "https://github.com/arkalia-luna-system/bbia-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["bbia_sim*"]
exclude = ["tests*", "*.__pycache__", "*.DS_Store"]

[tool.setuptools.package-data]
bbia_sim = ["*.py", "*.txt", "*.wav"]

[tool.setuptools.exclude-package-data]
"*" = ["*._*", "*.DS_Store", "._*", "**/._*", "**/*._*", "__pycache__", "**/__pycache__"]

# Configuration pytest moderne et complète
[tool.pytest.ini_options]
# OPTIMISATION RAM: Configuration pytest optimisée
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", "logs", ".venv", "venv", "__pycache__", "reachy_repos", "scripts"]
minversion = "6.0"

# OPTIMISATION RAM: Par défaut, exclure tests lents/lourds/hardware sauf si demandé explicitement
addopts = [
    "-m", "not e2e and not slow and not heavy and not hardware",  # Skip e2e + webcam/hardware
    "-vv",  # Double verbose pour voir chaque test en temps réel
    "--tb=short",
    "-ra",
    "--strict-markers",
    "--disable-warnings",
    "--import-mode=importlib",
    # Arrêter après 50 échecs pour éviter les boucles infinies
    "--maxfail=50",
    "--durations=20",  # Afficher les 20 tests les plus lents pour identifier les goulots d'étranglement
    "--showlocals",  # Afficher les variables locales en cas d'erreur pour faciliter le debug
    # Couverture standardisée (même chemin que [tool.coverage.run].source)
    "--cov=src/bbia_sim",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=html:htmlcov",
    # "--cov-append",  # DÉSACTIVÉ : peut causer des problèmes de terminaison pytest
    "--cov-fail-under=0",
    # Timeout global pour éviter les tests qui bouclent (30s = suffisant pour tests optimisés, 2x plus rapide)
    # La méthode 'signal' est plus fiable mais nécessite SIGALRM (disponible sur Linux/macOS)
    # La méthode 'thread' fonctionne partout mais peut être moins efficace
        "--timeout=60",  # Augmenté pour tests lents (chargement modèles HF)
    "--timeout-method=signal",  # Utiliser signal sur macOS/Linux (plus fiable que thread)
]

env = [
    "MUJOCO_GL=disable",
    "DISPLAY=",
    "BBIA_DISABLE_AUDIO=1",
    "BBIA_FORCE_MOCK_MODELS=1",
    "BBIA_DISABLE_VISION_MODELS=1",
]

# Marqueurs pour tests légers/lourds (fusionné)
markers = [
    "benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')",
    "slow: marque les tests lents (peuvent charger modèles lourds) / marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: marque les tests rapides (utilisent mocks uniquement) / marks tests as fast (deselect with '-m \"not fast\"')",
    "model: marque les tests qui chargent de vrais modèles (YOLO, Whisper, HuggingFace)",
    "heavy: marque les tests très lourds en RAM/CPU",
    "e2e: marque les tests end-to-end / marks tests as end-to-end tests",
    "unit: marque les tests unitaires / marks tests as unit tests",
    "integration: marque les tests d'intégration / marks tests as integration tests",
    "audio: marks tests requiring audio hardware",
    "vision: marks tests requiring camera/vision",
    "robot: marks tests requiring real robot connection",
    "hardware: marks tests requiring hardware (webcam, microphone, etc.)",
    "ci_skip: tests to skip in CI environment",
]

filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | venv[^/]*
  | venv-vision.*
  | build
  | dist
  | logs
  | reachy_repos
  | assets
  | site-packages
  | lib/python.*/site-packages
)/
'''
# Mode preview désactivé pour compatibilité CI/CD
preview = false

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "venv",
    "venv-vision*",
    "venv*",
    "logs",
    "reachy_repos",
    "assets",
    "__pycache__",
    ".git",
    ".mypy_cache",
    "build",
    "dist",
    "site-packages",
    "tests",
    "tests/**",
    "tests/*",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    # Docstring style rules (suggestions de style, non critiques)
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D107",  # Missing docstring in __init__
    "D205",  # 1 blank line required between summary line and description
    "D212",  # Multi-line docstring summary should start at the first line
    "D213",  # Multi-line docstring summary should start at the second line
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D413",  # Missing blank line after last section
    "D415",  # First line should end with a period, question mark, or exclamation point
    # Import style rules (lazy loading parfois nécessaire)
    "PLC0415",  # import should be at the top-level of a file
    "TID252",  # Prefer absolute imports over relative imports
    # Try/except style suggestions
    "TRY300",  # Consider moving this statement to an else block
    "TRY401",  # Redundant exception object included in logging.exception call
    # Complexity rules (déjà C901 ignoré)
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    # Function arguments style
    "FBT001",  # Boolean-typed positional argument in function definition
    "FBT002",  # Boolean default positional argument in function definition
    # Code style
    "ERA001",  # Found commented-out code (commentaires explicatifs utiles)
    "PGH003",  # Use specific rule codes when ignoring type issues
    # ANN401 retiré : principales occurrences corrigées (typing.Any → types précis)
    # SLF001 retiré : principales occurrences corrigées (getattr avec noqa pour cas nécessaires)
    # S603 retiré : code sécurisé avec validation et noqa pour cas nécessaires
    # PTH110 retiré : toutes les occurrences corrigées (os.path.exists() → Path.exists())
]

[tool.ruff.lint.isort]
known-first-party = ["bbia_sim"]

[tool.mypy]
python_version = "3.11"

# OPTIMISATION PERFORMANCE: Réduire RAM et accélérer
incremental = true
cache_fine_grained = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
warn_unused_configs = false
warn_unused_ignores = false
warn_return_any = false
warn_no_return = false
warn_redundant_casts = false
warn_unreachable = false

# OPTIMISATION: Types moins stricts pour performance
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
strict_equality = false

# OPTIMISATION: Ne pas suivre imports externes (plus rapide, moins RAM)
follow_imports = "skip"
ignore_missing_imports = true
exclude = [
    "tests/",
    "logs/",
    "reachy_repos/",
    "assets/",
    ".venv/",
    "venv/",
    "venv-vision*",
    "venv*",
    "site-packages",
    "lib/python.*/site-packages",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["bbia_sim"]
known_third_party = [
    "pytest", "numpy", "opencv", "PIL", "pyttsx3", "speech_recognition", 
    "pyaudio", "sounddevice"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
skip = [".venv", "venv", "venv-vision*", "venv*", "logs", "reachy_repos", "assets", "__pycache__", ".git", "site-packages"]
skip_glob = ["**/reachy_repos/*", "**/lib/python*/site-packages/*"]
force_sort_within_sections = true
lines_after_imports = 2

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "venv-vision-py310", "logs", "reachy_repos", "assets", "site-packages"]
exclude = [".*", "._*", "*.pyc", "__pycache__"]
skips = ["B101", "B108", "B306", "B601", "B110", "B615", "B602", "B506", "B404"]
targets = ["src/bbia_sim/"]
recursive = true
verbose = false
output_format = "json"
output_file = "logs/bandit_report.json"

[tool.coverage.run]
source = ["src/bbia_sim"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/venv-vision*/*",
    "*/venv*/*",
    "*/logs/*",
    "*/reachy_repos/*",
    "*/assets/*",
    "*/htmlcov/*",
    "*/site-packages/*",
    "*/lib/python*/site-packages/*",
    "*/__main__.py",  # Exclure les fichiers __main__
]
branch = true
relative_files = true
data_file = ".coverage"
parallel = false  # DÉSACTIVÉ : peut causer des problèmes de terminaison pytest
concurrency = ["thread"]  # Support threading pour éviter les conflits

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2
fail_under = 0
